# RAG-hw

./: .gitignore  IMPROVEMENTS.md  README.md  pyproject.toml
app/: config.py  generator.py  main.py  prompts.py
doc/: 00_project_idea.md  DATA.md  conventions.md  tasklist.md  vision.md  workflow.md
homework/: SUBMISSION.md
scripts/: build_index.py  check_generator.py  check_retrieval.py  ingest.py  prepare_datasets.py
tests/: test_chunking.py  test_retrieval.py
